# tuim

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  TODO.md  ideia.txt
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml  linux.yaml  windows-nt.yaml  workflow.yml  xnu.yaml
cli/: CMakeLists.txt  README.md
cli/scripts/: build.bat  build.sh
cli/src/: CMakeLists.txt  tuim.c
crt/: LICENSE  README.md
crt/src/: __aeabi_dadd.c  __aeabi_idivmod.c  __aeabi_llsr.c  a.out  aeabi.c  (+12 more)
doc/: INSTALL-linux.md  INSTALL-termux.md  README.md  cap_development.tex  cap_execution.tex  cap_introduction.tex  cap_libraries.tex  configurar_code.tex  configurar_fontes.tex  configurar_hyper.tex  configurar_utilidades.tex  main.tex  man.txt  references.bib  tuim.md
docs/: download.html  index.html  script.js  start.sh
interfaces/: README.md
libc/: Make.sh  README.md  makefile
libkernel/: Make.sh  README.md  makefile
libraries/: README.md
libtuim/: CMakeLists.txt  Makefile  README.md
libtuim/docs/: README.md  linux.md  windows.md
libtuim/include/: tuim.h
libtuim/scripts/: build.sh  install.sh
libtuim/src/: aligned_alloc.c  kernel.h  libtuim.c  ptrarray.h  tuim.h  tuim_as.c  tuim_cc.c  tuim_deletecontext.c  tuim_errno.c  tuim_error.c  tuim_exec.c  tuim_findsymbol.c  tuim_free.c  tuim_getentry.c  tuim_getpath.c  tuim_impl.h  tuim_ld.c  tuim_linker.c  tuim_loader.c  tuim_mk.c  tuim_newcontext.c  tuim_pathsearch.c  tuim_printelf.c  tuim_private.h  tuim_target.c  tuim_utils.h
libtuim/src/include/: tuim.h
libtuim/src/machine-host/: get_dependency.c  get_symbol.c  relocate-arm.c  tuim_aligned_alloc.c  tuim_check_attributes.c  tuim_host_delete_vm.c  tuim_host_new_vm.c  tuim_load.c  tuim_load_segments.c  tuim_mprotect.c
papers/: Make.sh  README.md  TODO.md
scripts/: build.bat  build.sh  install.sh  test.sh
src/: CMakeLists.txt  cmain.c  load.c  private.h  tuim.c  tuim.elf
src-cli/: CMakeLists.txt  README.md  tuim.c
src-loader/: CMakeLists.txt  README.md  aligned_alloc.c  elf.h  libtuim.c  machine.h  tuim_error.c  tuim_findsymbol.c  tuim_free.c  tuim_getentry.c  tuim_loader.c  tuim_mprotect.c  tuim_pathsearch.c  tuim_private.h  tuim_utils.h
src-loader/include/: tuim.h
src/crt/: arm.c  crt.c  crt.h
src/include/isa/: arm.h
src/tests/: entry_point  entry_point.c  ola  ola.c  ola_mundo  ola_mundo.asm  putc.c
tdk/: README.md
test/: main.c  object.c  object.h  ooc.h  stack.c  stack.h
tuim/: Make.sh  README.md  TODO.md  makefile
(+509 files in other folders)
