CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(tuim_loader LANGUAGES C)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/include)

set(BUILD_SHARED_LIBS ON)
set(BUILD_STATIC_LIBS ON)
ADD_LIBRARY(tuim_loader
   ${CMAKE_CURRENT_SOURCE_DIR}/src/tuim_error.c
   ${CMAKE_CURRENT_SOURCE_DIR}/src/tuim_loader.c
   ${CMAKE_CURRENT_SOURCE_DIR}/src/tuim_getentry.c
   ${CMAKE_CURRENT_SOURCE_DIR}/src/tuim_findsymbol.c
   ${CMAKE_CURRENT_SOURCE_DIR}/src/tuim_free.c
)
SET_PROPERTY(TARGET tuim_loader PROPERTY OUTPUT_NAME tuim)
TARGET_INCLUDE_DIRECTORIES(tuim_loader PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/include)
