CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(tuim VERSION 0.1.0 LANGUAGES C)
ADD_SUBDIRECTORY(
   ${CMAKE_CURRENT_SOURCE_DIR}/../src-loader
   ${CMAKE_CURRENT_BINARY_DIR}/src-loader
)

ADD_EXECUTABLE(tuim_cli
   ${CMAKE_CURRENT_SOURCE_DIR}/tuim.c
)
SET_PROPERTY(TARGET tuim_cli PROPERTY OUTPUT_NAME tuim)
TARGET_LINK_LIBRARIES(tuim_cli PUBLIC tuim)
