CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(tuim VERSION 0.1.0 LANGUAGES C)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

set(BUILD_SHARED_LIBS ON)
set(BUILD_STATIC_LIBS ON)
ADD_LIBRARY(tuim
   ${CMAKE_CURRENT_SOURCE_DIR}/tuim_error.c
   ${CMAKE_CURRENT_SOURCE_DIR}/tuim_loader.c
   ${CMAKE_CURRENT_SOURCE_DIR}/tuim_getentry.c
   ${CMAKE_CURRENT_SOURCE_DIR}/tuim_findsymbol.c
   ${CMAKE_CURRENT_SOURCE_DIR}/tuim_free.c
)
TARGET_INCLUDE_DIRECTORIES(tuim PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
