CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(tuim VERSION 0.1.0 LANGUAGES C)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
ADD_EXECUTABLE(tuim
   ${CMAKE_CURRENT_SOURCE_DIR}/tuim.c
   ${CMAKE_CURRENT_SOURCE_DIR}/fread.c
   ${CMAKE_CURRENT_SOURCE_DIR}/malloc/malloc.c
   ${CMAKE_CURRENT_SOURCE_DIR}/cmain.c
   ${CMAKE_CURRENT_SOURCE_DIR}/load.c
   ${CMAKE_CURRENT_SOURCE_DIR}/relocate/relocate.c
   ${CMAKE_CURRENT_SOURCE_DIR}/crt/crt.c
)
